--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ repositories {
 }
 
 apply plugin: 'application'
-mainClassName = 'pracitcaltwo.MathTrick'
+mainClassName = 'practicaltwo.MathTrick'
 
 apply plugin: 'checkstyle'
 checkstyle.toolVersion = '8.1'
