--- a/config/gatorgrader.yml
+++ b/config/gatorgrader.yml
@@ -11,7 +11,6 @@ src/main/java/practicaltwo:
         MatchFileFragment --fragment "{Your Name Here}" --count 0 --exact
         MatchFileFragment --fragment "TODO" --count 0 --exact
         MatchFileFragment --fragment "+=" --count 1
-        MatchFileFragment --fragment "-=" --count 1
         MatchFileFragment --fragment "*=" --count 1
         MatchFileFragment --fragment "int cardA" --count 1 --exact
         MatchFileFragment --fragment "int cardB" --count 1 --exact
@@ -19,6 +18,7 @@ src/main/java/practicaltwo:
         MatchFileFragment --fragment "int workingTotal" --count 1 --exact
         MatchFileFragment --fragment "\t" --count 2
         MatchFileFragment --fragment "System.out.println" --count 2 --exact
+        MatchFileRegex --regex "\-=" --count 1
         
 ExecuteCommand --command "gradle build"
 ExecuteCommand --command "gradle run -q --console plain run"
